--- a/src/components/WordData/WordData.css
+++ b/src/components/WordData/WordData.css
@@ -1,6 +1,5 @@
-.navmenu-item {
+.worddata-item {
     display: flex;
-    width: 45px;
     height: 40px;
     border: 1px solid black;
     border-radius: 35px;
@@ -10,7 +9,7 @@
     justify-content: center
 }
 
-.navmenu-item a {
+.worddata-item a {
     font-size: 1.2rem;
     font-weight: 700;
     color: gray;
