--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,24 @@ main {
 
 section {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
   gap: 20px;
+}
+
+.page_word {
+  font-size: 5rem;
+  font-style: italic;
+  font-weight: 800;
+  color:cadetblue;
+  text-align: center;
+  box-sizing: border-box;
+  text-shadow: 1rem 1rem 1rem gray;
+}
+
+.oneword {
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
