--- a/src/components/WordData/WordData.css
+++ b/src/components/WordData/WordData.css
@@ -1,12 +1,22 @@
+.worddata {
+    display: flex;
+    gap: 10px;
+    margin: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .worddata__item {
     display: flex;
+    width: 100%;
     height: 40px;
     border: 1px solid black;
     border-radius: 35px;
     padding: 10px;
     background-color: blanchedalmond;
     align-items: center;
-    justify-content: center
+    justify-content: center;
 }
 
 .worddata__item a {
@@ -14,4 +24,20 @@
     font-weight: 700;
     color: gray;
     text-decoration: none;
+}
+
+.worddata__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    border-radius: 50%;
+    width: 15%;
+    height: 80%;
+    cursor: pointer;
+}
+
+.worddata__icon {
+    width: 90%;
+    margin: 2%;
 }
