--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,55 @@ section {
   justify-content: center;
   align-items: center;
 }
+
+.editpanel {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+}
+
+.button__add {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  border-radius: 48%;
+  width: 3.5rem;
+  cursor: pointer;
+}
+
+.button__add-icon {
+  width: 100%;
+  margin: 2%;
+}
+
+.worddata__edit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.worddata__edit-tfield {
+  display: block;
+  width: 20rem;
+  height: 1.5rem;
+  margin-right: 10px;
+  border-radius: 15px;
+  background-color: lightgray;
+  text-align: center;
+}
+
+.worddata__edit-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  border-radius: 48%;
+  width: 3.5rem;
+  cursor: pointer;
+}
+
+.worddata__edit-icon {
+  width: 100%;
+  margin: 2%;
+}
