--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ section {
   justify-content: center;
   align-items: center;
   margin-left: 10px;
-  border-radius: 48%;
+  border-radius: 10px;
   width: 3.5rem;
   cursor: pointer;
 }
@@ -65,11 +65,12 @@ section {
 .worddata__edit-tfield {
   display: block;
   width: 20rem;
-  height: 1.5rem;
+  height: 2rem;
   margin-right: 10px;
   border-radius: 15px;
   background-color: lightgray;
   text-align: center;
+  font-size: 1.2rem;
 }
 
 .worddata__edit-button {
@@ -77,7 +78,7 @@ section {
   justify-content: center;
   align-items: center;
   margin-left: 10px;
-  border-radius: 48%;
+  border-radius: 10px;
   width: 3.5rem;
   cursor: pointer;
 }
