--- a/src/components/AddEditPanel/AddEditPanel.css
+++ b/src/components/AddEditPanel/AddEditPanel.css
@@ -7,7 +7,7 @@
 .worddata__edit-tfield {
     display: block;
     width: 20rem;
-    height: 1.5rem;
+    height: 2rem;
     margin-right: 10px;
     border-radius: 15px;
     background-color: lightgray;
@@ -19,7 +19,7 @@
     justify-content: center;
     align-items: center;
     margin-left: 10px;
-    border-radius: 48%;
+    border-radius: 10px;
     width: 3.5rem;
     cursor: pointer;
 }
