--- a/src/components/WordData/WordData.css
+++ b/src/components/WordData/WordData.css
@@ -31,7 +31,7 @@
     justify-content: center;
     align-items: center;
     margin-left: 10px;
-    border-radius: 50%;
+    border-radius: 10px;
     width: 15%;
     height: 80%;
     cursor: pointer;
