--- a/src/components/WordData/WordData.css
+++ b/src/components/WordData/WordData.css
@@ -2,6 +2,8 @@
     display: flex;
     gap: 10px;
     margin: 10px;
+    border: 1px solid black;
+    border-radius: 35px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -12,7 +14,7 @@
     width: 100%;
     height: 40px;
     border: 1px solid black;
-    border-radius: 35px;
+    border-radius: 35px; 
     padding: 10px;
     background-color: blanchedalmond;
     align-items: center;
@@ -35,6 +37,18 @@
     width: 15%;
     height: 80%;
     cursor: pointer;
+}
+
+.worddata__item input {
+    display: block;
+    border: 1px solid black;
+    border-radius: 0.75rem;
+    width: 50%;
+    height: 1.5rem;
+    background-color: lightgray;
+    text-align: center;
+    font-size: 1.2rem;
+
 }
 
 .worddata__icon {
